--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,36 +8,42 @@
     android:background="@color/background"
     tools:context="com.js.crickauctionapp.HomeScreen.HomeActivity">
 
-    
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/viewPagerImageSlider"
+
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:paddingStart="@dimen/_20sdp"
-        android:paddingEnd="@dimen/_20sdp"
-        android:layout_height="300dp"
-        />
+        android:layout_height="match_parent">
 
-
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/create_auction_card"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_180sdp"
-        app:cardElevation="@dimen/_10sdp"
-        android:layout_marginStart="@dimen/_10sdp"
-        android:layout_marginEnd="@dimen/_10sdp"
-        android:layout_marginTop="@dimen/_20sdp"
-        app:cardCornerRadius="@dimen/_20sdp">
-
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
-            <ImageView
-                android:id="@+id/create_auction_image_view"
+            android:orientation="vertical">
+
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/viewPagerImageSlider"
+            android:layout_width="match_parent"
+            android:paddingStart="@dimen/_20sdp"
+            android:paddingEnd="@dimen/_20sdp"
+            android:layout_height="250dp"
+            />
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/create_auction_card"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_180sdp"
+            app:cardElevation="@dimen/_10sdp"
+            app:cardUseCompatPadding="true"
+            app:cardCornerRadius="@dimen/_20sdp">
+
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_180sdp"
-                android:src="@drawable/create_auction_bg"
-                android:scaleType="centerCrop"/>
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+                <ImageView
+                    android:id="@+id/create_auction_image_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_180sdp"
+                    android:src="@drawable/create_auction_bg"
+                    android:scaleType="centerCrop"/>
 
                 <TextView
                     android:id="@+id/create_tv"
@@ -66,62 +72,66 @@
 
 
 
-        </RelativeLayout>
+            </RelativeLayout>
 
 
-    </com.google.android.material.card.MaterialCardView>
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/creditedCardBtn"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_180sdp"
-        app:cardElevation="@dimen/_10sdp"
-        android:layout_marginStart="@dimen/_10sdp"
-        android:layout_marginEnd="@dimen/_10sdp"
-        android:layout_marginTop="@dimen/_20sdp"
-        app:cardCornerRadius="@dimen/_20sdp">
-
-        <RelativeLayout
+        </com.google.android.material.card.MaterialCardView>
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/creditedCardBtn"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-            <ImageView
-                android:id="@+id/auction_image_view"
+            android:layout_height="@dimen/_180sdp"
+            app:cardElevation="@dimen/_10sdp"
+            app:cardUseCompatPadding="true"
+            app:cardCornerRadius="@dimen/_20sdp">
+
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_180sdp"
-                android:src="@drawable/join_auction"
-                android:scaleType="centerCrop"/>
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+                <ImageView
+                    android:id="@+id/auction_image_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_180sdp"
+                    android:src="@drawable/join_auction"
+                    android:scaleType="centerCrop"/>
 
-            <TextView
-                android:id="@+id/join_tv"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Join"
-                android:shadowColor="@color/black"
-                android:shadowRadius="10"
-                android:textColor="@color/white"
-                android:fontFamily="@font/lemon_regular"
-                android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_5sdp"
-                android:textSize="@dimen/_20sdp"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Auction"
-                android:shadowColor="@color/black"
-                android:shadowRadius="10"
-                android:textColor="@color/white"
-                android:fontFamily="@font/lemon_regular"
-                android:layout_marginStart="@dimen/_10sdp"
-                android:layout_below="@+id/join_tv"
-                android:textSize="@dimen/_20sdp"/>
+                <TextView
+                    android:id="@+id/join_tv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Join"
+                    android:shadowColor="@color/black"
+                    android:shadowRadius="10"
+                    android:textColor="@color/white"
+                    android:fontFamily="@font/lemon_regular"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:textSize="@dimen/_20sdp"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Auction"
+                    android:shadowColor="@color/black"
+                    android:shadowRadius="10"
+                    android:textColor="@color/white"
+                    android:fontFamily="@font/lemon_regular"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    android:layout_below="@+id/join_tv"
+                    android:textSize="@dimen/_20sdp"/>
 
 
 
 
-        </RelativeLayout>
+            </RelativeLayout>
 
 
-    </com.google.android.material.card.MaterialCardView>
+        </com.google.android.material.card.MaterialCardView>
+
+        </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
+
 
 
 
